Signed-off-by: naokigwin <gwin7ok@gmail.com>

--- a/readme.htm
+++ b/readme.htm
@@ -1,4 +1,4 @@
-﻿ニコニコ動画 QWatchをキーボードで操作するGreaseMonkeyスクリプト(Firefox,Google Chrome用)【最新バージョン：ver.4.0 更新日2012/10/29】Qwatchにも対応しました。
+﻿ニコニコ動画 QWatchをキーボードで操作するGreaseMonkeyスクリプト(Firefox,Google Chrome用)【最新バージョン：ver.4.0.1 更新日2012/10/31】Qwatchにも対応しました。
 <br>
 【ショートカットキー一覧】<br>
 <a href="http://s3.amazonaws.com/uso_ss/19061/large.png?1351511432"><img src="http://s3.amazonaws.com/uso_ss/19061/large.png?1351511432" alt=""></a><br>
@@ -50,7 +50,9 @@
 ＊不具合報告・要望等は、"Discuss this script"　からお願いします。<br>
 <br>
 【更新履歴】<br>
-ver 4.0 (2012/10/29更新)
+ver 4.0.1 (2012/10/31更新)<br>
+　巻き戻し/早送り時、0秒未満や総時間以上に移動しようとしてブラウザが固まる不具合を修正。<br>
+ver 4.0 (2012/10/29更新)<br>
 　「動画再生プレーヤー」フォーカス強制解除モードのON("B"キー)/OFF("N"キー)機能を追加。<br>
 　　→コメントを入力する場合は、"N"キーでフォーカス強制解除モードをOFFにしてください。<br>
 　　　フォーカス強制解除モードをONにする場合は、「動画再生プレーヤー」外をクリックして手動でフォーカスを外してから"B"キーを押して下さい。<br>
@@ -105,7 +107,7 @@ ver.1.0　　(2012/06/23更新)<br>
 <br>
 <br>
 Nicovideo Controller for Qwatch for Greasemonkey <http://userscripts.org/scripts/show/136812><br>
-naokigwin/Nicovideo-Controller-for-Qwatch <https://github.com/naokigwin/Nicovideo-Controller-for-Zero><br>
+naokigwin/Nicovideo-Controller-for-Qwatch <https://github.com/naokigwin/Nicovideo-Controller-for-Qwatch><br>
 <br>
 このスクリプトはこちらの原宿バージョン用のスクリプトをもとにQwatchで動作するよう修正しました。<br>
 http://d.hatena.ne.jp/dionore/20081213/1229175974<br>
